@@ -1,5 +1,9 @@
 # $Id$
 
+2008-03-27	Konstantin V. Arkhipov
+
+	* main/Net/Http/HeaderUtils.class.php: redirect() removed, finally.
+
 2008-03-24	Konstantin V. Arkhipov
 
 	* core/Form/Primitives/PrimitiveIdentifierList.class.php: custom
